# some_bevy_game

./: .gitignore  Cargo.toml  wasm-build.sh
.github/workflows/: release.yaml
assets/shaders/: extended_2d_material.wgsl
graphics/: bullet.xcf  logo.xcf
src/: assets.rs  bullet.rs  error_handler.rs  health.rs  main.rs  map_builder.rs  physics.rs  ship.rs  stars.rs  velocity.rs
src/maps/: level_1.rs  mod.rs  tutorial.rs
wasm/: index.html
